--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,9 @@
         "ДЕСЕРТИ",
         "ХОЛОДНІ",
         "НАПОЇ",
-        "ВИПІЧКА"
+        "ВИПІЧКА",
+        "Меню",
+        "Головна"
 
 
     ]
