--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,16 @@
 {
     "cSpell.words": [
-        "Купити",
-        "Пошук",
-        "напою",
-        "rneui",
-        "КАВА",
-        "ДЕСЕРТИ",
-        "ХОЛОДНІ",
-        "НАПОЇ",
         "ВИПІЧКА",
+        "Головна",
+        "ДЕСЕРТИ",
+        "КАВА",
+        "Купити",
         "Меню",
-        "Головна"
-
-
+        "НАПОЇ",
+        "напою",
+        "Пошук",
+        "ХОЛОДНІ",
+        "PRODUCTLIST",
+        "rneui"
     ]
 }
