--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,18 @@
 {
     "cSpell.words": [
+        "більше",
         "ВИПІЧКА",
         "Головна",
         "ДЕСЕРТИ",
+        "Ідеально",
         "КАВА",
         "Купити",
         "Меню",
         "НАПОЇ",
         "напою",
+        "Побачити",
         "Пошук",
+        "тебе",
         "ХОЛОДНІ",
         "PRODUCTLIST",
         "rneui"
