--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,10 @@
     "cSpell.words": [
         "більше",
         "ВИПІЧКА",
+        "Гарячі",
         "Головна",
         "ДЕСЕРТИ",
+        "Дивитися",
         "Ідеально",
         "КАВА",
         "Купити",
