--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,34 @@
 {
     "cSpell.words": [
         "більше",
+        "Будь",
+        "Ваше",
+        "виберіть",
         "ВИПІЧКА",
         "Гарячі",
         "Головна",
+        "готується",
         "ДЕСЕРТИ",
         "Дивитися",
+        "Дякуємо",
+        "замовлення",
         "Ідеально",
         "КАВА",
         "Купити",
+        "ласка",
         "Меню",
         "НАПОЇ",
         "напою",
+        "оберіть",
+        "один",
         "Побачити",
         "Пошук",
+        "продукт",
+        "Спочатку",
         "тебе",
+        "Увага",
         "ХОЛОДНІ",
+        "хоча",
         "PRODUCTLIST",
         "rneui"
     ]
