--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,25 +3,34 @@
         "більше",
         "Будь",
         "Ваше",
+        "вдалося",
         "виберіть",
         "ВИПІЧКА",
         "Гарячі",
         "Головна",
         "готується",
+        "даних",
+        "Дані",
         "ДЕСЕРТИ",
         "Дивитися",
         "Дякуємо",
+        "завантаженні",
+        "Завантаження",
+        "завантажити",
         "замовлення",
         "Ідеально",
         "КАВА",
         "Купити",
         "ласка",
         "Меню",
+        "мережі",
         "НАПОЇ",
         "напою",
         "оберіть",
         "один",
+        "отримано",
         "Побачити",
+        "Помилка",
         "Пошук",
         "продукт",
         "Спочатку",
