--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@react-navigation/stack": "^7.4.8",
+    "@reduxjs/toolkit": "^2.5.0",
     "expo": "^54.0.7",
     "expo-asset": "~12.0.8",
     "expo-dev-client": "~6.0.12",
@@ -33,7 +34,8 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-toast-message": "^2.3.3",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
