--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@backpackapp-io/react-native-toast": "^0.14.0",
     "@expo/metro-runtime": "~6.1.2",
+    "@expo/vector-icons": "^15.0.2",
     "@react-native-vector-icons/material-icons": "^12.3.0",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/drawer": "^7.5.8",
@@ -33,6 +34,7 @@
     "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-switch": "^1.5.1",
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.21.0",
     "react-redux": "^9.2.0"
