--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coffee_store",
   "version": "1.0.0",
-  "main": "index.tsx",
+  "main": "index.jsx",
   "scripts": {
     "start": "expo start --dev-client",
     "web": "expo start --web",
@@ -9,6 +9,7 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
+    "@babel/runtime": "^7.28.4",
     "@backpackapp-io/react-native-toast": "^0.14.0",
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
@@ -20,7 +21,8 @@
     "@react-navigation/native-stack": "^7.3.26",
     "@react-navigation/stack": "^7.4.8",
     "@reduxjs/toolkit": "^2.9.0",
-    "expo": "^54.0.7",
+    "babel-preset-expo": "^54.0.4",
+    "expo": "^54.0.13",
     "expo-asset": "~12.0.8",
     "expo-dev-client": "~6.0.12",
     "expo-linking": "~8.0.8",
@@ -28,7 +30,7 @@
     "expo-system-ui": "~6.0.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "^0.81.4",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "^4.1.2",
@@ -40,7 +42,7 @@
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.28.4",
     "@types/react": "~19.1.10",
     "typescript": "~5.9.2"
   },
