додав скриншоти зменшення бандлу відео анімацій для передостаннього дз все готово

--- a/app.json
+++ b/app.json
@@ -8,6 +8,9 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "scheme": "coffestore",
+
+    "jsEngine": "jsc",
+
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.coffestore"
@@ -15,7 +18,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+          "backgroundColor": "#ffffff"
       },
       "package": "com.coffestore"
     },
