--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "expo-linking": "~8.0.8",
     "expo-splash-screen": "~31.0.10",
     "expo-system-ui": "~6.0.7",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.sortby": "^4.7.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "^0.81.4",
@@ -43,7 +45,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
+    "@react-native-community/cli": "^20.0.2",
+    "@react-native/metro-config": "^0.82.1",
     "@types/react": "~19.1.10",
+    "source-map-explorer": "^2.5.3",
     "typescript": "~5.9.2"
   },
   "private": true
